Parametrize LLVM include path

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,3 +1,5 @@
+LLVM16_INCLUDE_PATH = "/opt/homebrew/opt/llvm@16/include/"
+
 .PHONY: clean all
 
 all: kcomp
@@ -6,16 +8,16 @@ kcomp: driver.o parser.o scanner.o kcomp.o
 	clang++ -o kcomp driver.o parser.o scanner.o kcomp.o `llvm-config --cxxflags --ldflags --libs --libfiles --system-libs`
 
 kcomp.o:  kcomp.cpp driver.hpp
-	clang++ -c kcomp.cpp -I/opt/homebrew/opt/llvm@16/include/ -std=c++17 -fno-exceptions -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS
+	clang++ -c kcomp.cpp -I$(LLVM16_INCLUDE_PATH) -std=c++17 -fno-exceptions -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS
 	
 parser.o: parser.cpp
-	clang++ -c parser.cpp -I/opt/homebrew/opt/llvm@16/include/ -std=c++17 -fno-exceptions -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS
+	clang++ -c parser.cpp -I$(LLVM16_INCLUDE_PATH) -std=c++17 -fno-exceptions -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS
 	
 scanner.o: scanner.cpp parser.hpp
-	clang++ -c scanner.cpp -I/opt/homebrew/opt/llvm@16/include/ -std=c++17 -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS 
+	clang++ -c scanner.cpp -I$(LLVM16_INCLUDE_PATH) -std=c++17 -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS 
 	
 driver.o: driver.cpp parser.hpp driver.hpp
-	clang++ -c driver.cpp -I/opt/homebrew/opt/llvm@16/include/ -std=c++17 -fno-exceptions -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS 
+	clang++ -c driver.cpp -I$(LLVM16_INCLUDE_PATH) -std=c++17 -fno-exceptions -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS 
 
 parser.cpp, parser.hpp: parser.yy 
 	bison -o parser.cpp parser.yy
